[tool.poetry]
name = "airlines-fare-tickets"
version = "0.1.0"
description = ""
authors = ["EdgeSan <edgar.kalinovski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
plotly = "^5.19.0"
chart-studio = "^1.1.0"
cufflinks = "^0.17.3"
pre-commit = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
